plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.13'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.timcooki'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	// mapstruct
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// test -> LocalDateTime 오류
	implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0")

	// springdoc(swagger)
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
}

// mapstruct 기본 Component Model 변경
compileJava {
	options.compilerArgs += ['-Amapstruct.defaultComponentModel=spring']
}
compileTestJava {
	options.compilerArgs += ['-Amapstruct.defaultComponentModel=spring']
}
//test {
//	useJUnitPlatform()
//	jvmArgs(['--enable-preview', '-Amapstruct.defaultComponentModel=spring'])
//}

jar {
	manifest {
		attributes 'Main-Class': 'com.timcooki.jnuwiki.JnuwikiApplication'
	}
}

// JPA 메타모델 생성 설정
compileJava.options.annotationProcessorPath = configurations.compileClasspath

// TODO: gradle 알아보기
tasks.named('test') {
	useJUnitPlatform()
}